# discord-transcriber

./: .gitignore  CLAUDE_CODE_INSTRUCTIONS.md  README.md  audio_capture.py  config.py  discord-transcriber-phase4-spec.md  discord-transcriber-spec.md  main.py  pyproject.toml  server.py  test_capture.py  test_transcribe.py  test_vad.py  transcriber.py  vad.py
plugins/: diarizer.py  session_store.py  summarizer.py  translator.py
static/: index.html
