[project]
name = "discord-transcriber"
version = "0.1.0"
description = "Discord VC real-time transcription tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.1.0",
    "sounddevice>=0.5.0",
    "numpy>=1.26.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "websockets>=13.0",
    "silero-vad>=5.1",
    "torch>=2.4.0",
    "PyAudioWPATCH>=0.2.12",
    "scipy>=1.12.0",
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
diarization = ["pyannote.audio>=4.0.0,<4.0.2", "omegaconf>=2.3.0"]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch" }]
torchaudio = [{ index = "pytorch" }]
